<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="@dimen/item_normal">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="4"
        android:id="@+id/tv_text"
        android:gravity="center"
        android:text="@string/question"
        android:singleLine="true"
        android:ellipsize="middle"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/tv_modify"
        android:text="@string/modify"
        android:textSize="@dimen/font_large"
        android:background="@color/green"
        android:gravity="center"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/tv_delete"
        android:text="@string/delete"
        android:textSize="@dimen/font_large"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:layout_height="match_parent"/>
</LinearLayout>