<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/normal_dialog"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_warning"
        android:textColor="@color/red"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/et_num"
            android:inputType="number"
            android:hint="@string/hint_question_num"
            android:layout_height="@dimen/item_normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_normal"
            android:textColor="@color/green"
            android:id="@+id/tv_hintAnswered"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_normal"
            android:text="@string/answered"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_gravity="center"
            android:id="@+id/cb_answered"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal"
        android:hint="@string/hint_question"
        android:id="@+id/et_question"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal"
        android:hint="@string/hint_answer"
        android:id="@+id/et_answer"/>

    <include layout="@layout/layout_dialog_foot"
        android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_normal"
        android:layout_width="wrap_content"/>
</LinearLayout>